--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,23 @@
 [package]
 name = "trustoline"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+lto = true
+codegen-units = 1
+opt-level = "z"
+panic = "abort"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+windows-sys = { version = "0.32.0", features = [
+    "Win32_Foundation",
+    "Win32_System_JobObjects",
+    "Win32_System_Threading",
+    "Win32_Security",
+] }
