--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "trustoline"
 version = "0.1.0"
 edition = "2021"
+autotests = false
 
 [profile.dev]
 panic = "abort"
@@ -15,9 +16,17 @@ panic = "abort"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-windows-sys = { version = "0.32.0", features = [
+windows-sys = { version = "0.42.0", features = [
     "Win32_Foundation",
     "Win32_System_JobObjects",
     "Win32_System_Threading",
     "Win32_Security",
+    "Win32_System_Console",
+    "Win32_Storage_FileSystem",
+    "Win32_System_IO",
 ] }
+# This provides implementations of memcpy, memset, etc., which the compiler assumes
+# are available.
+compiler_builtins = { version = "*", features = ["mem"]}
+ufmt-write = "*"
+ufmt = "*"
