--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,10 +30,13 @@ windows-sys = { version = "0.42.0", features = [
     "Win32_System_Threading",
     "Win32_System_JobObjects",
     "Win32_System_Diagnostics_Debug",
+    "Win32_System_WindowsProgramming",
 ] }
 # This provides implementations of memcpy, memset, etc., which the compiler assumes
 # are available.
 compiler_builtins = { version = "*", features = ["mem"]}
 ufmt-write = "*"
 ufmt = "*"
+
+[build-dependencies]
 embed-manifest = "*"
