--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "trustoline"
+name = "posy-trampoline"
 version = "0.1.0"
 edition = "2021"
 autotests = false
@@ -29,14 +29,14 @@ windows-sys = { version = "0.42.0", features = [
     "Win32_Security",
     "Win32_Storage_FileSystem",
     "Win32_System_Console",
+    "Win32_System_Diagnostics_Debug",
     "Win32_System_Environment",
     "Win32_System_IO",
+    "Win32_System_JobObjects",
     "Win32_System_JobObjects",
     "Win32_System_LibraryLoader",
     "Win32_System_Memory",
     "Win32_System_Threading",
-    "Win32_System_JobObjects",
-    "Win32_System_Diagnostics_Debug",
     "Win32_System_WindowsProgramming",
     "Win32_UI_WindowsAndMessaging",
 ] }
